fix z-index on buttons galore

--- a/src/styles/buttons-galore.scss
+++ b/src/styles/buttons-galore.scss
@@ -25,6 +25,7 @@ input {
     opacity: 0.1;
 
     &:hover {
+      z-index: 6969;
       scale: 1.5;
 
       &:nth-child(even) {
